Collections: Appending scene links random collections to existing scene - Need to change policy on 'orphaned' objects in link/append code #67032

Closed
opened 2019-07-16 04:15:58 +02:00 by Wayne Dixon · 8 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-15 20:44, hash: af51988115
Worked: (optional)

Short description of error
When appending a scene from another file Blender will link some random collections at 0,0,0

Exact steps for others to reproduce the error
Start a fresh file
Append the 'BG' scene from the 'treasure-chest-BG' file.
It will link some of the collections to the current scene in the working file.

See attached video and files
append_scene_test.blend

blender_bug_APPENDING_SCENE.mp4

treasure-chest-BG.blend

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-15 20:44, hash: `af51988115` Worked: (optional) **Short description of error** When appending a scene from another file Blender will link some random collections at 0,0,0 **Exact steps for others to reproduce the error** Start a fresh file Append the 'BG' scene from the 'treasure-chest-BG' file. It will link some of the collections to the current scene in the working file. See attached video and files [append_scene_test.blend](https://archive.blender.org/developer/F7612152/append_scene_test.blend) [blender_bug_APPENDING_SCENE.mp4](https://archive.blender.org/developer/F7612153/blender_bug_APPENDING_SCENE.mp4) [treasure-chest-BG.blend](https://archive.blender.org/developer/F7612151/treasure-chest-BG.blend)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-07-16 20:52:09 +02:00

There is something wrong here indeed... think it's related to non-instanced objects, but still investigating.

There is something wrong here indeed... think it's related to non-instanced objects, but still investigating.

Yeah, this is not a bug in fact. Your treasure-chest-BG.blend file has several objects which are not in any scene (the ones in fern collection e.g.)… Blender used to forbid this, and hence those 'orphaned' objects/collections are forcefully added to the current scene when linking/appending.

We can probably consider changing this policy, now that any collection can be instantiated in a view layer at any time, as long as an object belongs to at least one collection, things should be OK…

Will keep that task open as a TODO, we'll have to wait for after 2.80 release to address this anyway.

Yeah, this is not a bug in fact. Your `treasure-chest-BG.blend` file has several objects which are not in any scene (the ones in `fern` collection e.g.)… Blender used to forbid this, and hence those 'orphaned' objects/collections are forcefully added to the current scene when linking/appending. We can probably consider changing this policy, now that any collection can be instantiated in a view layer at any time, as long as an object belongs to at least one collection, things should be OK… Will keep that task open as a TODO, we'll have to wait for after 2.80 release to address this anyway.
Bastien Montagne changed title from Collections: Appending scene links random collections to existing scene to Collections: Appending scene links random collections to existing scene - Need to change policy on 'orphaned' objects in link/append code 2019-07-16 22:37:23 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

I think it should only instance the objects or collections that were selected by the user in the file browser, all the indirect stuff indeed does not need to be instanced.

I think it should only instance the objects or collections that were selected by the user in the file browser, all the indirect stuff indeed does not need to be instanced.

This issue was referenced by 37b4384b59

This issue was referenced by 37b4384b59c09684ac4ece5e39bf20187968f737

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67032
No description provided.