Fix T67032: Do not systematically link 'orphaned' indirectly linked objects to scene.

Not even in append case. If those objects are already part of a
collection, we can now leave them fully un-instantiated in any scene,
since user can easily do it themselves as they need to.